Rename CSS and JS files for consistency

--- a/Rock_paper game.html
+++ b/Rock_paper game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper game</title>
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="Rock_paper_game.css">
 </head>
 <body>
     <h1>Rock Paper Scissor</h1>
@@ -38,6 +38,6 @@
     </div>
 
 </div>
-    <script src="game.js"></script>
+    <script src="Rock_paper_game.js"></script>
 </body>
 </html>
